packages/typ/tests/fixtures/diagnostics/0352_external_identity_use_mismatch_02.ml.expected
File "0352_external_identity_use_mismatch_02.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0352_external_identity_use_mismatch_02 is not a valid module name.

File "0352_external_identity_use_mismatch_02.ml", line 2, characters 16-20:
2 | let _ = id_beta true
                    ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
